tests/vertical-slice/reject/machine_task_gate_fork_args.hew
// Reject fixture: a `fork child = worker(42)` inside a machine state entry
// block must fail before codegen. The current end-to-end compiler stops at the
// HIR zero-argument spawn gate for `fork name = call(...)`; HIR unit coverage
// pins the lower-level Item::Machine task-gate walker directly.
fn worker(x: i64) {}

machine M {
    events {
        Tick;
    }

    state Idle {
        entry {
            scope {
                fork child = worker(42);
            }
        }
    }
    state Done;

    on Tick: Idle => Done {
        Done
    }

    default { state }
}

fn main() {}
